make-a-wish-salesforce/src/objects/cg__ContactFile__c.object
<CustomObject>
    <fields>
        <fullName>File_Path__c</fullName>
        <label>File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Name__c</fullName>
        <description>Parent Folder Name</description>
        <label>Parent Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Files</relationshipLabel>
        <relationshipName>Contact_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cg__Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Size__c</fullName>
        <formula>IF(!(ISBLANK(cg__Shortcut__c )),  RIGHT(cg__Shortcut__c, (LEN(cg__Shortcut__c) - FIND(&apos;:&apos;, cg__Shortcut__c))) ,IF(cg__File_Size_in_Bytes__c &gt; 1024, 
IF(cg__File_Size_in_Bytes__c &gt; 1048576, 
IF(cg__File_Size_in_Bytes__c &gt; 1073741824, 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1073741824),2)) &amp; &quot; GB&quot;, 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1048576),2)) &amp; &quot; MB&quot;), 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1024),2)) &amp; &quot; KB&quot;), 
TEXT(cg__File_Size_in_Bytes__c) &amp; &quot; bytes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Size_in_Bytes__c</fullName>
        <label>File Size in Bytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Latest_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Parent_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Page_Count__c</fullName>
        <label>Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Parent_Folder_Id__c</fullName>
        <description>Stores the parent folder&apos;s Id</description>
        <label>Parent Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Key__c</fullName>
        <label>Preview Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Version_Id__c</fullName>
        <label>Preview Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the file can be accessed by portal users. If &apos;private&apos;, it is not accessible by portal users.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Shortcut__c</fullName>
        <label>Shortcut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Sync_Id__c</fullName>
        <label>Sync Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Tags__c</fullName>
        <label>Tags</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Key__c</fullName>
        <label>Thumbnail Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Version_Id__c</fullName>
        <label>Thumbnail Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Version_Description__c</fullName>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Version_Id__c</fullName>
        <label>Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__WIP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact File</label>
    <listViews>
        <fullName>cg__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>cg__File_Name__c</columns>
        <columns>cg__Preview_Key__c</columns>
        <columns>cg__Preview_Version_Id__c</columns>
        <columns>cg__Thumbnail_Key__c</columns>
        <columns>cg__Thumbnail_Version_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>